trying to fix edge arrow edge sometimes are not visible

--- a/src/main/webapp/css/graph_displayers/relative_tree_displayer.css
+++ b/src/main/webapp/css/graph_displayers/relative_tree_displayer.css
@@ -12,7 +12,7 @@
 
 .vertex-tree-container{
     display:table;
-    margin-left:1em;
+    margin-left:2.6em;
 }
 
 .vertex-container{
